--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -1,23 +1,34 @@
 
-div {
+h1 {
+    color: darkred;
+    background-color: rgb(241, 218, 186);
+    margin: 0 auto;
+    width: 150px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+img {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+h2 {
+    padding-top: 10px;
+    font-size: 20px;
+    border-top: 1px solid black;
+}
+p {
+    text-align: justify;
+}
+.border {
     width: 500px;
     margin: auto;
     border: 1px solid black;
     padding: 10px;
     background-color: antiquewhite;
 }
-h1 {
-    text-align: center;
-    color: darkred;
-}
-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;    
-}
-h2 {
-    font-size: 20px;
-}
-p {
-    text-align: justify;
+.contents {
+    background-color: rgb(241, 218, 186);
+    padding: 10px;
+    margin-top: 10px;
 }
